--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.32.4"
+flask = "<3.0"
 
 
 [tool.poetry.group.dev.dependencies]
